added test cases

--- a/data-analysis.ipynb
+++ b/data-analysis.ipynb
@@ -1525,17 +1525,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "from pypdf import PdfReader\n",
+    "\n",
+    "reader = PdfReader(\"/Users/muhammadfaisal/Documents/jobs/visable/task/product_catalogue_for_task2.pdf\")\n",
+    "for page in reader.pages:\n",
+    "    for image in page.images:\n",
+    "        with open(image.name, \"wb\") as fp:\n",
+    "            fp.write(image.data)"
+   ]
   }
  ],
  "metadata": {
